Fixed all errors in test file regarding constructor